welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: not found: value dies2
	if (noDoubles && die1 == dies2 && 6 != b && a != 6 ) { return a+b+1 }
                                 ^withoutDoubles:2: error: not found: value a
	if (noDoubles && die1 == dies2 && 6 != b && a != 6 ) { return a+b+1 }
                                                                      ^withoutDoubles:3: error: not found: value dies2
	else if (noDoubles && die1 == dies2 && (a == 6) ){ a=1; return a+b }
                                      ^withoutDoubles:3: error: not found: value a
	else if (noDoubles && die1 == dies2 && (a == 6) ){ a=1; return a+b }
                                                           ^withoutDoubles:3: error: not found: value a
	else if (noDoubles && die1 == dies2 && (a == 6) ){ a=1; return a+b }
                                                                       ^withoutDoubles:4: error: not found: value dies2
	else if (noDoubles && die1 == dies2 && (b == 6) ){ b=1; return a+b }
                                      ^withoutDoubles:4: error: not found: value b
	else if (noDoubles && die1 == dies2 && (b == 6) ){ b=1; return a+b }
                                                           ^withoutDoubles:4: error: not found: value a
	else if (noDoubles && die1 == dies2 && (b == 6) ){ b=1; return a+b }
                                                                       ^withoutDoubles:5: error: not found: value a
	else return a+b
                    ^